--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
 
     <meta charset="utf-8">
+    <meta name="Description" content="This is Stephanie Avila website as a journalist, content manager, and web developer. She is a professional expert in html, css and understands professioal workflow in github and git">
     <title>S.Avila: HomePage</title>
 
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -13,24 +14,27 @@
   </head>
 
   <body>
+
     <!--===== Begin Header =====-->
   <header>
     <div class="container">
 
       <div class="logo">
-        <h1>S.Avila</h1>
+        <h1>
+          <a href="index.html">S.Avila</a>
+        </h1>
       </div>
 
       <nav class="menu">
         <ul>
           <li>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="#">About</a>
+            <a href="about.html">About</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
           </li>
         </ul>
       </nav>
@@ -106,30 +110,80 @@
  </section>
 
 <!--=====Begin About Section=====-->
-<section id="about">
-  <div class="image-box">
-    <div class="image">
-    <a href="#">
-      <img src="https://pixabay.com/static/uploads/photo/2015/10/25/09/26/lioness-1005474_960_720.jpg" alt=""/>
-    </a>
-  </div>
-  </div>
-  <div class="article-box">
-    <div class="article">
-    <h2>More About Me</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-  </div>
+<div id="about">
+           <div class="container">
 
-</section>
+               <div class="pic">
+                 <img src="img/snail.jpg" class="selfie"/>
+
+               </div>
+
+
+               <div class="bio">
+                   <h1>More About Me</h1>
+                   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                   sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                   magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                   quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                   ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+                   dolor in hendrerit in vulputate velit esse molestie consequat,
+                   vel illum dolore eu feugiat nulla facilisis at vero eros et
+                   accumsan et iusto odio dignissim qui blandit praesent luptatum
+                   zzril delenit augue duis dolore te feugait nulla facilisi.
+                   Nam liber tempor cum soluta nobis eleifend option congue
+                   nihil imperdiet doming id quod mazim placerat facer possim
+                   assum. Typi non habent claritatem insitam; est usus legentis
+                   in iis qui facit eorum claritatem. Investigationes
+                   demonstraverunt lectores legere me lius quod ii legunt saepius.
+                   Claritas est etiam processus dynamicus, qui sequitur mutationem
+                   consuetudium lectorum. Mirum est notare quam littera gothica,
+                   quam nunc putamus parum claram, anteposuerit litterarum formas
+                   humanitatis per seacula quarta decima et quinta decima. Eodem
+                   modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
+                   in futurum.</p>
+               </div>
+           </div>
+       </div>
 
 <!--=====Begin Footer=====-->
-<section id="footer">
+<footer>
+     <div class="copyright">
+      <p>Powered by &copy; Avila Technology</p>
+        <div class="soc-icons">
+           <div class="icon">
+               <a href="">
+                   <i class="fa fa-facebook"></i>
+                 </a>
+         </div>
+          <div class="icon">
+                <a href="">
+                     <i class="fa fa-twitter"></i>
+                </a>
+         </div>
+          <div class="icon">
+              <a href="">
+                 <i class="fa fa-instagram"></i>
+             </a>
+         </div>
+         </div>
+         </div>
+ </footer>
 
-</section>
-
+<!--=====Google Analytics Code=====-->
 
     </div>
   </section>
+
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-75718340-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
   </body>
 </html>
